--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
       <p id="changeText"></p>
       <div class="progress" style="width: 25%;">
         <div id="resetprogress" class="progress-bar bg-danger" role="progressbar" aria-label="Basic example" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-      <script src="script.js"></script>
+      <script src="script.js" type="module"></script>
 </body>
 </html>
