Poprawienie skladni HTML

--- a/index.html
+++ b/index.html
@@ -36,43 +36,43 @@
         </div>
       </nav>
 
-      <div class="container-fluid mt-1">
+      <div class="container mt-1 ms-lg-1">
         <!-- Wyniki z DB -->
-        <div class="container ms-1">
+        <div class="container">
         <h1>Temperatura:
         <h2><b><span id="temperature-value"></span><span class="unit superscript"> °C</span></b></h2>
         </div>
         <br>
 
-        <div class="container ms-1">
+        <div class="container">
         <h1>Wiatr:
         <h2><b><span id="wind-value"></span><span class="unit"> km/h</span></b></h2>
         </div>
         <br>
 
-        <div class="container ms-1">
+        <div class="container">
         <h1>Ciśnienie:
         <h2><b><span id="pressure-value"></span><span class="unit"> hPa</span></b></h2>
         </div>
         <br>
 
-        <div class="container ms-1">
+        <div class="container">
         <h1>Deszcz:
         <h2><b><span id="rain-value"></span><span class="unit"> mm</span></b></h2>
         </div>
         <br>
 
-        <div class="container ms-1">
+        <div class="container">
         <h1>Wilgotność:
         <h2><b><span id="humidity-value"></span><span class="unit"> %</span></b></h2>
         </div>
         <br>
 
-      </div>
-
       <p id="changeText"></p>
       <div class="progress" style="width: 25%;">
         <div id="resetprogress" class="progress-bar bg-danger" role="progressbar" aria-label="Basic example" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-      <script src="script.js" type="module"></script>
+      </div>
+      </div>
+        <script src="script.js" type="module"></script>
 </body>
 </html>
