--- a/index.html
+++ b/index.html
@@ -37,43 +37,59 @@
         </div>
       </nav>
 
-      <div class="container mt-1 ms-lg-1">
-        <!-- Wyniki z DB -->
-        <div class="container">
-        <h1>Temperatura:
-        <h2><b><span id="temperature-value"></span><span class="unit superscript"> °C</span></b></h2>
-        </div>
-        <br>
+      <div class="container mt-1 ms-1">
+        <!-- Główny kontener-->
 
-        <div class="container">
-        <h1>Wiatr:
-        <h2><b><span id="wind-value"></span><span class="unit"> km/h</span></b></h2>
-        </div>
-        <br>
+        <div class="row align-items-start">
 
-        <div class="container">
-        <h1>Ciśnienie:
-        <h2><b><span id="pressure-value"></span><span class="unit"> hPa</span></b></h2>
-        </div>
-        <br>
+        <div class="col">
+              <!-- Wyniki z DB -->
+              <div class="row">
+                <h1>Temperatura:
+                <h2><b><span id="temperature-value"></span><span class="unit superscript"> °C</span></b></h2>
+              </div>
+              <br>
 
-        <div class="container">
-        <h1>Deszcz:
-        <h2><b><span id="rain-value"></span><span class="unit"> mm</span></b></h2>
-        </div>
-        <br>
+              <div class="row">
+                <h1>Wiatr:
+                <h2><b><span id="wind-value"></span><span class="unit"> km/h</span></b></h2>
+              </div>
+              <br>
 
-        <div class="container">
-        <h1>Wilgotność:
-        <h2><b><span id="humidity-value"></span><span class="unit"> %</span></b></h2>
-        </div>
-        <br>
+              <div class="row">
+                <h1>Ciśnienie:
+                <h2><b><span id="pressure-value"></span><span class="unit"> hPa</span></b></h2>
+              </div>
+              <br>
 
-      <p id="changeText"></p>
-      <div class="progress" style="width: 25%;">
-        <div id="resetprogress" class="progress-bar bg-danger" role="progressbar" aria-label="Basic example" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="row">
+                <h1>Deszcz:
+                <h2><b><span id="rain-value"></span><span class="unit"> mm</span></b></h2>
+              </div>
+              <br>
+
+              <div class="row">
+                <h1>Wilgotność:
+                <h2><b><span id="humidity-value"></span><span class="unit"> %</span></b></h2>
+              </div>
+            </div>
+
+            <div class="col">
+            <!-- Wykresy -->
+            <div class="row">
+              <canvas id="myChart"></canvas>
+            </div>
+            <br>
+
+            </div>
+        </div>
       </div>
-      </div>
-        <script src="script.js" type="module"></script>
+      
+      <!-- Odświeżanie postępu-->
+        <p id="changeText">Odświeżenie za <span class='primarycolor'><b><u>5</b></u></span> sekund</p>
+        <div class="progress" style="width: 25%;">
+          <div id="resetprogress" class="progress-bar bg-danger" role="progressbar" aria-label="Basic example" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      <script src="script.js" type="module"></script>
 </body>
 </html>
