--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </nav>
 
-      <div class="container mt-1 ms-1">
+      <div class="container-lg mt-1 ms-1">
         <!-- Główny kontener-->
 
         <div class="row align-items-start">
@@ -77,7 +77,9 @@
             <div class="col">
             <!-- Wykresy -->
             <div class="row">
+              <div class="container-lg ms-0">
               <canvas id="myChart"></canvas>
+            </div>
             </div>
             <br>
 
@@ -86,10 +88,12 @@
       </div>
       
       <!-- Odświeżanie postępu-->
+      <div class="container ms-1">
         <p id="changeText">Odświeżenie za <span class='primarycolor'><b><u>5</b></u></span> sekund</p>
         <div class="progress" style="width: 25%;">
           <div id="resetprogress" class="progress-bar bg-danger" role="progressbar" aria-label="Basic example" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
+      </div>
       <script src="script.js" type="module"></script>
 </body>
 </html>
