--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </div>
       </nav>
 
-      <div class="container-lg mt-1 ms-1">
+      <div class="container-lg ms-0 mt-0">
         <!-- Główny kontener-->
 
         <div class="row align-items-start">
 
-        <div class="col">
+        <div class="col ms-1 mt-1">
               <!-- Wyniki z DB -->
               <div class="row">
                 <h1>Temperatura:
@@ -74,12 +74,10 @@
               </div>
             </div>
 
-            <div class="col">
+            <div class="col-lg">
             <!-- Wykresy -->
             <div class="row">
-              <div class="container-lg ms-0">
               <canvas id="myChart"></canvas>
-            </div>
             </div>
             <br>
 
@@ -88,7 +86,7 @@
       </div>
       
       <!-- Odświeżanie postępu-->
-      <div class="container ms-1">
+      <div class="container-fluid">
         <p id="changeText">Odświeżenie za <span class='primarycolor'><b><u>5</b></u></span> sekund</p>
         <div class="progress" style="width: 25%;">
           <div id="resetprogress" class="progress-bar bg-danger" role="progressbar" aria-label="Basic example" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
