Ulepszony progress bar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Strona główna</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://github.com/chixPL/pistacja-frontend">GitHub</a>
+                <a class="nav-link" href="https://github.com/chixPL/pistacja">GitHub</a>
               </li>
             </ul>
           </div>
