--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
       
       <!-- Odświeżanie postępu-->
-      <div class="container-fluid">
+      <div class="container-fluid mb-underlg-2">
         <p id="changeText">Odświeżenie za <span class='primarycolor'><b><u>5</b></u></span> sekund</p>
         <div class="progress" style="width: 25%;">
           <div id="resetprogress" class="progress-bar bg-danger" role="progressbar" aria-label="Basic example" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
