--- a/index.html
+++ b/index.html
@@ -1,118 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Biblioteki i czcionki zewnętrzne -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Pistacja</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Biblioteki i czcionki zewnętrzne -->
+  <link href="data/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="data/lib/bootstrap/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script src="data/lib/jquery/jquery.min.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
+  <!-- Własne css i js -->
+  <link rel="stylesheet" href="style.css">
+  <script src="data/js/main.js" type="module"></script>
+  <title>Pistacja</title>
 </head>
-<body>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-light" style="background-color:#B20D3B;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="data/images/pistacja-logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                <b><span class="primarycolor">Pi</b></span>stacja
-              </a>          
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Strona główna</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://github.com/chixPL/pistacja">GitHub</a>
-              </li>
-            </ul>
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-light" style="background-color:#B20D3B;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="data/images/pistacja-logo.png" alt="Logo" width="30" height="24"
+          class="d-inline-block align-text-top">
+        <b><span class="primarycolor">Pi</b></span>stacja
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Strona główna</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/chixPL/pistacja">GitHub</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container-fluid mx-0 mt-0">
+    <!-- Główny kontener-->
+    <div class="row align-items-start">
+      <div class="col ms-1 mt-1">
+        <!-- Wyniki z DB -->
+        <div class="row">
+          <h1>Temperatura:
+            <h2><b><span id="temperature-value"></span><span class="unit superscript"> °C</span></b></h2>
+        </div>
+        <br>
+
+        <div class="row">
+          <h1>Wiatr:
+            <h2><b><span id="wind-value"></span><span class="unit"> km/h</span></b></h2>
+        </div>
+        <br>
+
+        <div class="row">
+          <h1>Ciśnienie:
+            <h2><b><span id="pressure-value"></span><span class="unit"> hPa</span></b></h2>
+        </div>
+        <br>
+
+        <div class="row">
+          <h1>Deszcz:
+            <h2><b><span id="rain-value"></span><span class="unit"> mm</span></b></h2>
+        </div>
+        <br>
+
+        <div class="row">
+          <h1>Wilgotność:
+            <h2><b><span id="humidity-value"></span><span class="unit"> %</span></b></h2>
+        </div>
+
+        <!-- Odświeżanie postępu-->
+        <div class="row">
+          <div class="container-fluid mb-underlg-2">
+            <p id="changeText">Odświeżenie za <span class='primarycolor'><b><u>5</b></u></span> sekund</p>
+            <div class="progress">
+              <div id="resetprogress" class="progress-bar bg-danger" role="progressbar" aria-label="Basic example"
+                style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </div>
         </div>
-      </nav>
+      </div>
 
-      <div class="container-fluid mx-0 mt-0">
-        <!-- Główny kontener-->
+      <div class="col-lg-6">
+        <!-- Wykresy -->
+        <div class="row">
+          <canvas id="temp-chart"></canvas>
+        </div>
+        <br>
+        <div class="row">
+          <canvas id="wind-chart"></canvas>
+        </div>
+        <br>
+      </div>
 
-        <div class="row align-items-start">
-
-          <div class="col ms-1 mt-1">
-              <!-- Wyniki z DB -->
-              <div class="row">
-                <h1>Temperatura:
-                <h2><b><span id="temperature-value"></span><span class="unit superscript"> °C</span></b></h2>
-              </div>
-              <br>
-
-              <div class="row">
-                <h1>Wiatr:
-                <h2><b><span id="wind-value"></span><span class="unit"> km/h</span></b></h2>
-              </div>
-              <br>
-
-              <div class="row">
-                <h1>Ciśnienie:
-                <h2><b><span id="pressure-value"></span><span class="unit"> hPa</span></b></h2>
-              </div>
-              <br>
-
-              <div class="row">
-                <h1>Deszcz:
-                <h2><b><span id="rain-value"></span><span class="unit"> mm</span></b></h2>
-              </div>
-              <br>
-
-              <div class="row">
-                <h1>Wilgotność:
-                <h2><b><span id="humidity-value"></span><span class="unit"> %</span></b></h2>
-              </div>
-            </div>
-
-            <div class="col-lg-6">
-            <!-- Wykresy -->
-            <div class="row">
-              <canvas id="temp-chart"></canvas>
-            </div>
-            <br>
-            <div class="row">
-              <canvas id="wind-chart"></canvas>
-            </div>
-            <br>
-            </div>
-
-            <div class="col-lg">
-                <h1 class="address"><b><span class="primarycolor">Pi</b></span>stacja znajduje się:</h1>
-                <br>
-                <div class="google-maps">
-                <iframe
-                  width="500"
-                  height="300"
-                  style="border:0"
-                  loading="lazy"
-                  allowfullscreen
-                  referrerpolicy="no-referrer-when-downgrade"
-                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDljNEQdZYfa8OCeByHw9WfFmKWOaJIOKE
+      <div class="col-lg">
+        <h1 class="address"><b><span class="primarycolor">Pi</b></span>stacja znajduje się:</h1>
+        <br>
+        <div class="google-maps">
+          <iframe width="500" height="300" style="border:0" loading="lazy" allowfullscreen
+            referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDljNEQdZYfa8OCeByHw9WfFmKWOaJIOKE
                     &q=place_id:ChIJQx8Hthk3AkcRYkHRYb5mGPY">
-                </iframe>
-              </div>
-            </div>
+          </iframe>
+        </div>
+      </div>
 
-        </div>
-      </div>
-      
-      <!-- Odświeżanie postępu-->
-      <div class="container-fluid mb-underlg-2">
-        <p id="changeText">Odświeżenie za <span class='primarycolor'><b><u>5</b></u></span> sekund</p>
-        <div class="progress" style="width: 25%;">
-          <div id="resetprogress" class="progress-bar bg-danger" role="progressbar" aria-label="Basic example" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-      </div>
-      <script src="script.js" type="module"></script>
+    </div>
+  </div>
 </body>
+
 </html>
