--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Biblioteki i czcionki zewnętrzne -->
-  <link href="data/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link href="data/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <script src="data/lib/bootstrap/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
   <script src="data/lib/jquery/jquery.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +43,7 @@
     </div>
   </nav>
 
-  <div class="container-fluid mx-0 mt-0">
+  <div class="container-fluid">
     <!-- Główny kontener-->
     <div class="row align-items-start">
       <div class="col ms-1 mt-1">
@@ -91,7 +89,7 @@
         </div>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-xxl-5">
         <!-- Wykresy -->
         <div class="row">
           <canvas id="temp-chart"></canvas>
