--- a/stats.html
+++ b/stats.html
@@ -10,11 +10,12 @@
     crossorigin="anonymous"></script>
   <script src="data/lib/jquery/jquery.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
   <!-- Własne css i js -->
-  <link rel="stylesheet" href="style.css">
   <script src="data/js/stats.js" type="module"></script>
+  <link rel="stylesheet" href="style.css">
   <title>Pistacja</title>
 </head>
 <body>
@@ -72,6 +73,15 @@
                 </div>
             </div>
         </div>
+        <div class="col-lg">
+        <div class="row float-end">
+          <div class="d-grid gap-2 d-md-block">
+          <button id="bar_chart" title="Wykres kolumnowy" type="button" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart-fill"></i></button>
+          
+          <button id="line_chart" title="Wykres liniowy" type="button" class="btn btn-secondary btn-sm"><i class="bi bi-graph-up"></i></button>
+        </div>
+        </div>
+        </div>
         </div>
 
         <div class="col-lg">
@@ -84,10 +94,8 @@
             <div class="row">
                 <img id="fetch" src="data/images/fetch.png">
             </div>
-
         </div>
     </div>
-    </div>
-
+  </div>
 </body>
 </html>
