--- a/index.html
+++ b/index.html
@@ -64,18 +64,17 @@
             </div>
 
 
-            <div class="col-auto">
+            <div class="col-lg-auto">
               <div class="row align-items-start">
                   <img id="compass" class="float-start" src="data/images/kompas.svg" style="width: 64px !important;height:64px !important;">
               </div>
-              <div class="row mb-0">
-                <p id="direction" class="text-center"></p>
+              <div class="row mb-0 ms-0">
+                <p id="direction"></p>
               </div>
               </div>
           </div>
-        <br>
 
-        <div class="row">
+        <div class="row"> 
           <h1>Ciśnienie:
             <h2><b><span id="pressure-value"></span><span class="unit"> hPa</span></b></h2>
         </div>
