--- a/stats.html
+++ b/stats.html
@@ -55,7 +55,7 @@
                 <h1>Miesięczne wyniki</h1>
             </div>
             <br>
-            <div class="row row-cols-2">
+            <div class="row row-cols-lg-2">
             <div class="col-lg-6">
                 <div class="row">
                 <div class="chart-container" style="position: relative">
@@ -74,10 +74,9 @@
             </div>
         </div>
         <div class="col-lg">
-        <div class="row float-end">
+        <div class="row float-lg-end">
           <div class="d-grid gap-2 d-md-block">
           <button id="bar_chart" title="Wykres kolumnowy" type="button" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart-fill"></i></button>
-          
           <button id="line_chart" title="Wykres liniowy" type="button" class="btn btn-secondary btn-sm"><i class="bi bi-graph-up"></i></button>
         </div>
         </div>
