--- a/stats.html
+++ b/stats.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
   <!-- Własne css i js -->
-  <script src="data/js/stats.js" type="module"></script>
+  <script src="data/js/src/stats.js" type="module"></script> <!-- TODO: Ustawić na data/js/min/stats.min.js kiedy skończę pisać javascripty, na razie zostawiam tak dla testów -->
   <link rel="stylesheet" href="style.css">
   <title>Pistacja</title>
 </head>
