HTML dla zakresów danych w statystykach, dodano ansi2html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </div>
               </div>
           </div>
-          <br class="d-none d-lg-block"> <!-- nie wyświetlaj br na urządzeniach mobilnych -->
+          <br class="d-none d-md-inline-block"> <!-- nie wyświetlaj br na urządzeniach mobilnych -->
         <div class="row"> 
           <h1>Ciśnienie:
             <h2><b><span id="pressure-value"></span><span class="unit"> hPa</span></b></h2>
