--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
   <!-- Własne css i js -->
   <link rel="stylesheet" href="style.css">
-  <script src="data/js/src/main.js" type="module"></script> <!-- TODO: Ustawić na data/js/min/main.min.js kiedy skończę pisać javascripty, na razie zostawiam tak dla testów -->
+  <script src="data/js/min/main.min.js" type="module"></script> <!-- TODO: Ustawić na data/js/min/main.min.js kiedy skończę pisać javascripty, na razie zostawiam tak dla testów -->
   <title>Pistacja</title>
 </head>
 
