Lepszy wygląd terminala

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
   <!-- Własne css i js -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="data/css/style.css">
   <script src="data/js/min/main.min.js" type="module"></script> <!-- TODO: Ustawić na data/js/min/main.min.js kiedy skończę pisać javascripty, na razie zostawiam tak dla testów -->
   <title>Pistacja</title>
 </head>
