Wybór daty dla prognozy dziennej

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a class="nav-link active" aria-current="page" href="index.html">Strona główna</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="date.html">Wybierz datę</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="stats.php">Statystyki</a>
           </li>
           <li class="nav-item">
